# tdt4173

./: .gitignore  README.md  main.py  playground.py  preprocessor.py  pyproject.toml  requirements.txt  utils.py
configs/: hyperparameters.gin  hyperparameters50.gin  hyperparameters_50.gin  hyperparameters_all.gin  project_settings.py  random_forest.gin
docs/: _config.yml  about.md  conf.py  dependencies.txt  index.html  index.rst  requirements.txt
docs/_authors/: alex.md  oskar.md  tobias.md
docs/_includes/: footer.html
docs/_layouts/: post.html
docs/_posts/: 2020-11-16-neural-networks-as-matchmakers.markdown  2020-11-16-our-first-blogpost.markdown  2020-11-16-tuning-a-neural-network.markdown  2020-11-20-why-you-should-never-use-a-ROC-ruve.markdown  2020-11-25-step-by-step-guide-to-classifying-a-data-set.markdown  YYYY-MM-DD-TEMPLATE-BLOGPOST-NAME.markdown
docs/content/: classifier.rst  evaluation.rst  methods.rst  models.rst  preprocessing.rst  preprocessor.rst  tools.rst  util.rst  utils.rst
evaluate/: evaluate.py  utils.py
evaluation/: evaluate.py  utils.py
methods/: adaBoost.py  ada_boost.py  classifier.py  decision_tree.py  dnn.py  knn.py  models.py  random_forest.py  svc.py  utils.py
methods/saved_models/: ab_tuned_50Features.sav  ab_tuned_allFeatures.sav  dt_tuned_50Features.sav  dt_tuned_allFeatures.sav
preprocess/: data_transformer.py  main.py  preprocessor.py  reduced.csv  tools.py
preprocess/datasets/: beta_test_set.csv  beta_training_set.csv  encoded.csv  test.csv  (+10 more)
preprocessing/: preprocessor.py  utils.py
results/: allFeatures.txt
(+4 files in other folders)
