[tool.poetry]
name = "tdt4173"
version = "0.1.0"
description = ""
authors = ["Alexander Orvik <alexaor@stud.ntnu.no>"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^0.23.2"
matplotlib = "^3.3.2"
pandas = "^1.1.3"
keras = "^2.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
